implemented home page and style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,49 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Personal Website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <div class="logo">Home</div>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#resume">Resume</a></li>
+                <li><a href="#projects">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <div class="content">
+            <div class="avatar">
+                <img src="avatar.jpg" alt="Avatar">
+            </div>
+            <h1>Alina Yang</h1>
+            <h3>Software Engineer</h3>
+            <div class="social-links">
+                <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
+                        class="fab fa-linkedin"></i></a>
+                <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
+            </div>
+            <div class="main-buttons">
+                <button>About</button>
+                </a><button>Resume</button>
+                </a><button>Projects</button>
+            </div>
+        </div>
+    </main>
+
+</body>
+
+</html>
