--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Home</div>
+            <a href="index.html">
+                <div class="logo">Home</div>
+            </a>
             </div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
