added contents folder, moved avatar and added resume

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li><a href="contents/resume_yuhan_yang.pdf">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
@@ -28,7 +28,7 @@
     <main>
         <div class="content">
             <div class="avatar">
-                <img src="avatar.jpg" alt="Avatar">
+                <img src="contents/avatar.jpg" alt="Avatar">
             </div>
             <h1>Alina Yang</h1>
             <h3>Software Engineer</h3>
