linked homepage button with resume

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
             <div class="main-buttons">
                 <button>About</button>
-                </a><button>Resume</button>
-                </a><button>Projects</button>
+                <a href="contents/resume_yuhan_yang.pdf"><button>Resume</button></a>
+                <button>Projects</button>
             </div>
         </div>
     </main>
