--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Personal Website</title>
+    <title>Alina's Cyberhome</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
     <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
