--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
             </a>
             </div>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="contents/resume_yuhan_yang.pdf">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -39,9 +41,11 @@
                 <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="main-buttons">
-                <button>About</button>
+                <a href="about.html"><button>About</button></a>
                 <a href="contents/resume_yuhan_yang.pdf"><button>Resume</button></a>
                 <button>Projects</button>
+                <button>Blog</button>
+                <button>Contacts</button>
             </div>
         </div>
     </main>
