--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
             </a>
             </div>
             <ul class="nav-links">
-                <li><a href="about.html">About</a></li>
-                <li><a href="contents/resume_yuhan_yang.pdf">Resume</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contacts">Contacts</a></li>
@@ -33,7 +31,17 @@
                 <img src="contents/avatar.jpg" alt="Avatar">
             </div>
             <h1>Alina Yang</h1>
-            <h3>Software Engineer</h3>
+            <div class="about">
+                <h3>About Me</h3>
+                <div class="code-block">
+                    <pre><code>class Me:
+    def __init__(self):
+        self.name = "Alina Yang"
+        self.curr_location = "Seattle, WA"
+        self.school = "Northeastern University"
+        self.major = "Computer Science"</code></pre>
+                </div>
+            </div>
             <div class="social-links">
                 <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
@@ -41,14 +49,16 @@
                 <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="main-buttons">
-                <a href="about.html"><button>About</button></a>
-                <a href="contents/resume_yuhan_yang.pdf"><button>Resume</button></a>
                 <button>Projects</button>
                 <button>Blog</button>
                 <button>Contacts</button>
             </div>
         </div>
     </main>
+
+    <footer>
+        <p>©2024 Alina Yang</p>
+    </footer>
 
 </body>
 
