--- a/index.html
+++ b/index.html
@@ -31,17 +31,7 @@
                 <img src="contents/avatar.jpg" alt="Avatar">
             </div>
             <h1>Alina Yang</h1>
-            <div class="about">
-                <h3>About Me</h3>
-                <div class="code-block">
-                    <pre><code>class Me:
-    def __init__(self):
-        self.name = "Alina Yang"
-        self.curr_location = "Seattle, WA"
-        self.school = "Northeastern University"
-        self.major = "Computer Science"</code></pre>
-                </div>
-            </div>
+
             <div class="social-links">
                 <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
@@ -53,11 +43,73 @@
                 <button>Blog</button>
                 <button>Contacts</button>
             </div>
+
+            <div class="about">
+                <h3>About Me</h3>
+                <div class="code-block">
+                    <pre><code>class Me:
+    def __init__(self):
+        self.name = "Alina Yang"
+        self.curr_location = "Seattle, WA"
+        self.interests = ["Hiking", "Travel", "Gaming"]
+        self.goal = "Become a full-stack developer."
+    </code></pre>
+                </div>
+            </div>
+
+            <section class="experience" id="experience">
+                <h3>Experience</h3>
+                <div class="timeline">
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date"> 2022 - Current</div>
+                        <div class="timeline-content">
+                            <h3>M.S. in Computer Science</h3>
+                            <p>Northeastern University</p>
+                        </div>
+
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date"> Summer 2024</div>
+                        <div class="timeline-content">
+                            <h3>Software Engineer Intern</h3>
+                            <p>Ipser Lab</p>
+                        </div>
+
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date"> 2021 - 2022</div>
+                        <div class="timeline-content">
+                            <h3>Engineer Associate</h3>
+                            <p>American Electric Power</p>
+                        </div>
+
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-dot"></div>
+                        <div class="timeline-date"> 2015 - 2019</div>
+                        <div class="timeline-content">
+                            <h3>B.S. in Civil Engineering</h3>
+                            <p>Ohio State University</p>
+                        </div>
+
+                    </div>
+
+                </div>
+            </section>
+
+
         </div>
     </main>
 
     <footer>
-        <p>©2024 Alina Yang</p>
+        <p>© 2024 Alina Yang</p>
     </footer>
 
 </body>
