initialized project, blog and contacts pages

--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">
-                <div class="logo">Home</div>
-            </a>
-            </div>
+            <div class="logo"><a href="index.html" class="active">Alina's Cyberhome</a></div>
             <ul class="nav-links">
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacts.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -39,9 +36,9 @@
                 <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="main-buttons">
-                <button>Projects</button>
-                <button>Blog</button>
-                <button>Contacts</button>
+                <a href="projects.html"><button>Projects</button></a>
+                <a href="blog.html"><button>Blog</button></a>
+                <a href="contacts.html"><button>Contacts</button></a>
             </div>
 
             <div class="about">
