added blog page and blog post page

--- a/blog.html
+++ b/blog.html
@@ -7,10 +7,9 @@
     <title>Alina's Blog</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body class="blog-page">
     <header>
         <nav>
             <div class="logo"><a href="index.html">Alina's Cyberhome</a></div>
@@ -22,10 +21,34 @@
         </nav>
     </header>
 
-    <main>
+    <div class="blog-header">
+        <h1>Alina's Blog</h1>
+    </div>
 
-    </main>
+    <div class="container">
+        <main>
+            <ul class="blog-posts">
+                <li class="blog-post">
+                    <a href="blog-post-1.html">
+                        <h2>My First Blog Post</h2>
+                        <p class="blog-meta">2024-10-04 • 1 min read • Personal</p>
+                        <p class="blog-excerpt">This is my first blog post.</p>
+                    </a>
+                </li>
+                <li class="blog-post">
+                    <a href="contents/resume_yuhan_yang.pdf">
+                        <h2>My Resume</h2>
+                        <p class="blog-meta">2024-10-5 • 5 min read • Personal</p>
+                        <p class="blog-excerpt">Click to view my resume.</p>
+                    </a>
+                </li>
+            </ul>
+        </main>
+    </div>
 
+    <footer>
+        <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
+    </footer>
 
 </body>
 
