--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,6 @@
     <title>Alina's Contacts</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,6 +25,10 @@
 
     </main>
 
+
+    <footer>
+        <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
+    </footer>
 
 </body>
 
