--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
                 <img src="contents/avatar.jpg" alt="Avatar">
             </div>
             <h1>Alina Yang</h1>
-
             <div class="social-links">
                 <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
@@ -106,7 +105,7 @@
     </main>
 
     <footer>
-        <p>© 2024 Alina Yang</p>
+        <p>© Copyright 2024 <span><a href="index.html"></a></span>. All rights reserved</p>
     </footer>
 
 </body>
