--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     </main>
 
     <footer>
-        <p>© Copyright 2024 <span><a href="index.html"></a></span>. All rights reserved</p>
+        <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
     </footer>
 
 </body>
