modified contacts page

--- a/contacts.html
+++ b/contacts.html
@@ -28,20 +28,16 @@
             <div class="contact-links">
                 <div class="social-item">
                     <a aria-label="icon" href="https://github.com/xftudou"><i class="fab fa-github"></i></a>
-                    <p>GitHub: https://github.com/xftudou</p>
+                    <p>GitHub</p>
                 </div>
                 <div class="social-item">
                     <a aria-label="icon" href="https://www.linkedin.com/in/yuhan-yang925/"><i
                             class=" fab fa-linkedin"></i></a>
-                    <p>LinkedIn: https://www.linkedin.com/in/yuhan-yang925/</p>
-                </div>
-                <div class="social-item">
-                    <a aria-label="icon" href="mailto:yang.yuhan3@northeastern.edu"><i class="fas fa-envelope"></i></a>
-                    <p>School: yang.yuhan3@northeastern.edu</p>
+                    <p>LinkedIn</p>
                 </div>
                 <div class="social-item">
                     <a aria-label="icon" href="mailto:yangyuhan824@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <p>Personal: yangyuhan824@gmail.com</p>
+                    <p>yangyuhan824@gmail.com</p>
                 </div>
             </div>
             <form action="https://formspree.io/f/xpwzalqr" method="POST">
