--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
                         class="fab fa-linkedin"></i></a>
-                <a href="#" aria-label="Email"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:yangyuhan824@gmail.com" aria-label=" Email"><i class="fas fa-envelope"></i></a>
             </div>
             <div class="main-buttons">
                 <a href="projects.html"><button>Projects</button></a>
