added dropdown menu for small window

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@
 <body class="blog-page">
     <header>
         <nav>
-            <div class="logo"><a href="index.html">Alina's Cyberhome</a></div>
+            <div class="logo"><a href="index.html">Alina Yang</a></div>
             <ul class="nav-links">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html" class="active">Blog</a></li>
