--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="index.html" class="active">Alina's Cyberhome</a></div>
+            <div class="logo"><a href="index.html" class="active">Alina Yang</a></div>
+            <input type="checkbox" id="menu-toggle" />
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
