--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="index.html">Alina's Cyberhome</a></div>
+            <div class="logo"><a href="index.html">Alina Yang</a></div>
             <ul class="nav-links">
                 <li><a href="projects.html" class="active">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
