modifications to fit mobile

--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
     <header>
         <nav>
             <div class="logo"><a href="index.html">Alina Yang</a></div>
+            <input type="checkbox" id="menu-toggle" />
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html" class="active">Blog</a></li>
@@ -30,14 +32,14 @@
             <ul class="blog-posts">
                 <li class="blog-post">
                     <a href="blog-post-1.html">
-                        <h2>My First Blog Post</h2>
+                        <h3>My First Blog Post</h3>
                         <p class="blog-meta">2024-10-04 • 1 min read • Personal</p>
                         <p class="blog-excerpt">This is my first blog post.</p>
                     </a>
                 </li>
                 <li class="blog-post">
                     <a href="contents/resume_yuhan_yang.pdf">
-                        <h2>My Resume</h2>
+                        <h3>My Resume</h3>
                         <p class="blog-meta">2024-10-5 • 5 min read • Personal</p>
                         <p class="blog-excerpt">Click to view my resume.</p>
                     </a>
