--- a/contacts.html
+++ b/contacts.html
@@ -14,6 +14,8 @@
     <header>
         <nav>
             <div class="logo"><a href="index.html">Alina Yang</a></div>
+            <input type="checkbox" id="menu-toggle" />
+            <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
