added projects page

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
 </head>
 
-<body>
+<body class="projects">
     <header>
         <nav>
             <div class="logo"><a href="index.html">Alina Yang</a></div>
@@ -24,6 +24,60 @@
     </header>
 
     <main>
+        <div class="content">
+            <h1>Projects</h1>
+            <div class="project-cards">
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <h3>Discord Pokémon Bot</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Developed a feature-rich Pokémon bot for discord using Java, Discord API, MongoDB;
+                                integrated features such as Pokémon battles, trading, and team management.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <h3>Lindo Gourmet Website</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Focused on designing the categories and product pages to create an intuitive and visually
+                                appealing shopping
+                                experience.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <h3>Multiplayer Online RPG Database and Web Interface</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Developed a MySQL database and JavaScript-based web interface for a multiplayer role-
+                                playing game.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-inner">
+                        <div class="card-front">
+                            <h3>Checkers</h3>
+                        </div>
+                        <div class="card-back">
+                            <p>Developed a Python-based Checkers game with Python Turtle for graphical enhancement.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
 
     </main>
 
