--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alina's Contacts</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../common/style.css">
+    <link rel="stylesheet" href="contacts.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
     <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
 </head>
@@ -13,13 +14,13 @@
 <body class="contacts">
     <header>
         <nav>
-            <div class="logo"><a href="index.html">Alina Yang</a></div>
+            <div class="logo"><a href="../index.html">Alina Yang</a></div>
             <input type="checkbox" id="menu-toggle" />
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacts.html" class="active">Contacts</a></li>
+                <li><a href="../projects/projects.html">Projects</a></li>
+                <li><a href="../blog/blog.html">Blog</a></li>
+                <li><a href="../contacts/contacts.html" class="active">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -61,7 +62,7 @@
 
 
     <footer>
-        <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
+        <p>© Copyright 2024 <span><a href="../index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
     </footer>
 
 </body>
