--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alina's Cyberhome</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="common/style.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
     <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
 </head>
@@ -17,88 +17,89 @@
             <input type="checkbox" id="menu-toggle" />
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="projects/projects.html">Projects</a></li>
+                <li><a href="blog/blog.html">Blog</a></li>
+                <li><a href="contacts/contacts.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
-        <div class="content">
-            <div class="avatar">
-                <img src="contents/avatar.jpg" alt="Avatar">
-            </div>
-            <h1>Alina Yang</h1>
-            <div class="social-links">
-                <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
-                        class="fab fa-linkedin"></i></a>
-                <a href="mailto:yangyuhan824@gmail.com" aria-label=" Email"><i class="fas fa-envelope"></i></a>
-            </div>
-            <div class="main-buttons">
-                <a href="projects.html"><button>Projects</button></a>
-                <a href="blog.html"><button>Blog</button></a>
-                <a href="contacts.html"><button>Contacts</button></a>
-            </div>
-
-            <div class="about">
-                <h3>About Me</h3>
-                <div class="code-block">
-                    <pre><code>class Me:
+    <div class="scrollable">
+        <main>
+            <div class="content">
+                <div class="avatar">
+                    <img src="common/avatar.jpg" alt="Avatar">
+                </div>
+                <h1>Alina Yang</h1>
+                <div class="social-links">
+                    <a href="https://github.com/xftudou" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/yuhan-yang925/" aria-label="LinkedIn"><i
+                            class="fab fa-linkedin"></i></a>
+                    <a href="mailto:yangyuhan824@gmail.com" aria-label=" Email"><i class="fas fa-envelope"></i></a>
+                </div>
+                <div class="main-buttons">
+                    <a href="projects/projects.html"><button>Projects</button></a>
+                    <a href="blog/blog.html"><button>Blog</button></a>
+                    <a href="contacts/contacts.html"><button>Contacts</button></a>
+                </div>
+                <div class="about">
+                    <h3>About Me</h3>
+                    <div class="code-block">
+                        <pre><code>class Me:
     def __init__(self):
         self.name = "Alina Yang"
         self.curr_location = "Seattle, WA"
         self.interests = ["Hiking", "Travel", "Gaming"]
         self.goal = "Become a full-stack developer."
     </code></pre>
+                    </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <section class="experience" id="experience">
-        <h3>Experience</h3>
-        <div class="timeline">
+        <section class="experience" id="experience">
+            <h3>Experience</h3>
+            <div class="timeline">
 
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date"> 2022 - Current</div>
-                <div class="timeline-content">
-                    <h4>M.S. in Computer Science</h4>
-                    <p>Northeastern University</p>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date"> 2022 - Current</div>
+                    <div class="timeline-content">
+                        <h4>M.S. in Computer Science</h4>
+                        <p>Northeastern University</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date"> Summer 2024</div>
-                <div class="timeline-content">
-                    <h4>Software Engineer Intern</h4>
-                    <p>Ipser Lab</p>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date"> Summer 2024</div>
+                    <div class="timeline-content">
+                        <h4>Software Engineer Intern</h4>
+                        <p>Ipser Lab</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date"> 2021 - 2022</div>
-                <div class="timeline-content">
-                    <h4>Engineer Associate</h4>
-                    <p>American Electric Power</p>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date"> 2021 - 2022</div>
+                    <div class="timeline-content">
+                        <h4>Engineer Associate</h4>
+                        <p>American Electric Power</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="timeline-item">
-                <div class="timeline-dot"></div>
-                <div class="timeline-date"> 2015 - 2019</div>
-                <div class="timeline-content">
-                    <h4>B.S. in Civil Engineering</h4>
-                    <p>Ohio State University</p>
+                <div class="timeline-item">
+                    <div class="timeline-dot"></div>
+                    <div class="timeline-date"> 2015 - 2019</div>
+                    <div class="timeline-content">
+                        <h4>B.S. in Civil Engineering</h4>
+                        <p>Ohio State University</p>
+                    </div>
                 </div>
-            </div>
 
-        </div>
-    </section>
+            </div>
+        </section>
+    </div>
 
     <footer>
         <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
