--- a/projects/projects.html
+++ b/projects/projects.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alina's Projects</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../common/style.css">
+    <link rel="stylesheet" href="projects.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
 </head>
 
 <body class="projects">
     <header>
         <nav>
-            <div class="logo"><a href="index.html">Alina Yang</a></div>
+            <div class="logo"><a href="../index.html">Alina Yang</a></div>
             <input type="checkbox" id="menu-toggle" />
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="nav-links">
-                <li><a href="projects.html" class="active">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
+                <li><a href="../projects/projects.html" class="active">Projects</a></li>
+                <li><a href="../blog/blog.html">Blog</a></li>
+                <li><a href="../contacts/contacts.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -83,7 +84,7 @@
 
 
     <footer>
-        <p>© Copyright 2024 <span><a href="index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
+        <p>© Copyright 2024 <span><a href="../index.html">Alina's Cyberhome</a></span>. All rights reserved</p>
     </footer>
 
 </body>
