separated homepage.css from common css

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -25,9 +25,12 @@
         </nav>
     </header>
 
+    <div class="contacts-header">
+        <h1>Contact Me</h1>
+    </div>
+
     <main>
         <div class="content">
-            <h1>Contact Me</h1>
             <div class="contact-links">
                 <div class="social-item">
                     <a aria-label="icon" href="https://github.com/xftudou"><i class="fab fa-github"></i></a>
