--- a/projects/projects.html
+++ b/projects/projects.html
@@ -24,9 +24,12 @@
         </nav>
     </header>
 
+    <div class="projects-header">
+        <h1>Projects</h1>
+    </div>
+
     <main>
         <div class="content">
-            <h1>Projects</h1>
             <div class="project-cards">
                 <div class="card">
                     <div class="card-inner">
