--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alina's Cyberhome</title>
     <link rel="stylesheet" href="common/style.css">
+    <link rel="stylesheet" href="homepage.css">
     <link href="https://fonts.cdnfonts.com/css/code-new-roman" rel="stylesheet">
     <script src="https://kit.fontawesome.com/88dba5bfa9.js" crossorigin="anonymous"></script>
 </head>
