changed project hover effect to click

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -29,9 +29,10 @@
     </div>
 
     <main>
-        <div class="content">
-            <div class="project-cards">
-                <div class="card">
+        <div class="project-cards">
+            <div class="card">
+                <input type="checkbox" id="flip-toggle-1" hidden />
+                <label for="flip-toggle-1">
                     <div class="card-inner">
                         <div class="card-front">
                             <h3>Discord Pokémon Bot</h3>
@@ -41,9 +42,12 @@
                                 integrated features such as Pokémon battles, trading, and team management.</p>
                         </div>
                     </div>
-                </div>
+                </label>
+            </div>
 
-                <div class="card">
+            <div class="card">
+                <input type="checkbox" id="flip-toggle-2" hidden />
+                <label for="flip-toggle-2">
                     <div class="card-inner">
                         <div class="card-front">
                             <h3>Lindo Gourmet Website</h3>
@@ -54,8 +58,12 @@
                                 experience.</p>
                         </div>
                     </div>
-                </div>
-                <div class="card">
+                </label>
+            </div>
+
+            <div class="card">
+                <input type="checkbox" id="flip-toggle-3" hidden />
+                <label for="flip-toggle-3">
                     <div class="card-inner">
                         <div class="card-front">
                             <h3>Multiplayer Online RPG Database and Web Interface</h3>
@@ -65,9 +73,12 @@
                                 playing game.</p>
                         </div>
                     </div>
-                </div>
+                </label>
+            </div>
 
-                <div class="card">
+            <div class="card">
+                <input type="checkbox" id="flip-toggle-4" hidden />
+                <label for="flip-toggle-4">
                     <div class="card-inner">
                         <div class="card-front">
                             <h3>Checkers</h3>
@@ -76,11 +87,8 @@
                             <p>Developed a Python-based Checkers game with Python Turtle for graphical enhancement.</p>
                         </div>
                     </div>
-                </div>
+                </label>
             </div>
-
-
-
         </div>
 
     </main>
